--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
                         <div class="col-lg-6">
                             <div class="hero__text">
                                 <div class="label">Action</div>
-                                <h2>Total overdose</h2>
+                                <h2>Total overdos</h2>
                                 <p>best action game for your Pc</p>
-                                <a href="#"><span>download Now</span> <i class="fa fa-angle-right"></i></a>
+                                <a href="#"><span>Download Now</span> <i class="fa fa-angle-right"></i></a>
                             </div>
                         </div>
                     </div>
